opam-version: "1.2"
maintainer: "Anil Madhavapeddy <anil@recoil.org>"
authors: ["Anil Madhavapeddy <anil@recoil.org>"]
homepage: "https://github.com/ocaml/obi"
doc: "https://ocaml.github.io/obi/"
license: "ISC"
dev-repo: "https://github.com/ocaml/obi.git"
bug-reports: "https://github.com/ocaml/obi/issues"
tags: ["org:mirage" "org:ocamllabs"]
available: [ ocaml-version >= "4.05.0"]
depends: [
  "jbuilder" {build & >="1.0+beta17"}
  "obi"
  "dockerfile-opam"
  "dockerfile-cmd"
  "ezjsonm"
  "lambdasoup"
  "uri"
  "ptime"
  "yaml"
]
build: [
  ["jbuilder" "build" "-j" jobs]
]
