opam-version: "1.2"
maintainer: "Anil Madhavapeddy <anil@recoil.org>"
authors: ["Anil Madhavapeddy <anil@recoil.org>"]
homepage: "https://github.com/ocaml/obi"
doc: "https://ocaml.github.io/obi/"
license: "ISC"
dev-repo: "https://github.com/ocaml/obi.git"
bug-reports: "https://github.com/ocaml/obi/issues"
tags: ["org:mirage" "org:ocamllabs"]
available: [ ocaml-version >= "4.05.0"]
depends: [
  "obi"
  "dune" {build}
  "dockerfile-opam" {>="5.0.0"}
  "dockerfile-cmd" {>="5.0.0"}
  "ezjsonm"
  "uri"
  "ptime"
  "yaml" {>="0.2.0"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
