opam-version: "2.0"
maintainer: "Anil Madhavapeddy <anil@recoil.org>"
authors: "Anil Madhavapeddy <anil@recoil.org>"
license: "ISC"
tags: ["org:mirage" "org:ocamllabs"]
homepage: "https://github.com/ocaml/obi"
doc: "https://ocaml.github.io/obi/"
bug-reports: "https://github.com/ocaml/obi/issues"
depends: [
  "ocaml" {>= "4.05.0"}
  "obi"
  "dune" {build}
  "dockerfile-opam" {>= "5.0.0"}
  "dockerfile-cmd" {>= "5.0.0"}
  "ezjsonm"
  "uri"
  "ptime"
  "yaml" {>= "0.2.0"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/ocaml/obi.git"
synopsis: "Interface the OCaml Build Infrastructure with GitLab"
