opam-version: "1.2"
maintainer: "Anil Madhavapeddy <anil@recoil.org>"
authors: ["Anil Madhavapeddy <anil@recoil.org>"]
homepage: "https://github.com/ocaml/obi"
doc: "https://ocaml.github.io/obi/"
license: "ISC"
dev-repo: "https://github.com/ocaml/obi.git"
bug-reports: "https://github.com/ocaml/obi/issues"
tags: ["org:ocamllabs" "flags:plugin" ]
available: [ ocaml-version >= "4.05.0"]
depends: [
  "dune" {build}
  "obi"
  "bos"
  "cmdliner"
  "fmt"
  "logs"
  "rresult"
  "textwrap"
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
