opam-version: "2.0"
maintainer: "Anil Madhavapeddy <anil@recoil.org>"
authors: "Anil Madhavapeddy <anil@recoil.org>"
license: "ISC"
tags: "org:ocamllabs"
homepage: "https://github.com/ocaml/obi"
doc: "https://ocaml.github.io/obi/"
bug-reports: "https://github.com/ocaml/obi/issues"
depends: [
  "ocaml" {>= "4.05.0"}
  "dune" {build}
  "obi"
  "bos"
  "cmdliner"
  "fmt"
  "logs"
  "rresult"
  "textwrap"
]
flags: plugin
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/ocaml/obi.git"
synopsis: "CLI interface to the OCaml Build Infrastructure"
